# libsignal-protocol-rs

./: .gitignore  Cargo.toml  README.md  build.rs
curve25519/: Cargo.toml  build.rs  wrapper.h
curve25519/curve25519-c/: CMakeLists.txt  curve25519-donna.h
curve25519/src/: lib.rs
libsignal-protocol-sys/: Cargo.toml  build.rs  wrapper.h
libsignal-protocol-sys/src/: lib.rs
src/: devices.rs  ecc.rs  error.rs  identity_key.rs  kdf.rs  key_helper.rs  lib.rs  protos.rs  ratchet.rs  signal.rs  state.rs  utils.rs
